fixed alignment for buttons on mobile devices and changed ordering of qualification

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -80,6 +80,7 @@
 .send-msg-btn:hover {
     background-color: #0011FF; 
 }
+
 .contact__form {
     width: 360px;
 }
@@ -142,17 +143,19 @@
 
     .contact__form {
         margin: 0 auto;
+        width: 100%;
+        max-width: 360px;
     }
 
+    .send-msg-btn {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 @media screen and (max-width: 576px) {
     .contact__info {
         grid-template-columns: 1fr;
-    }
-
-    .contact__form {
-        width: 100%;
     }
 }
 
