--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -175,6 +175,9 @@
 
     .home__data {
         grid-column: 1/3;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .home__scroll {
